more fixes, hide button labels on mobile, remove ui notice

--- a/app/style.css
+++ b/app/style.css
@@ -390,4 +390,14 @@ input:disabled {
   li {
     font-size: 12px;
   }
+  #signout span, #signout .ti-logout + * {
+    display: none;
+  }
+  #signout {
+    padding: 0 10px;
+    flex-shrink: 0;
+  }
+  .btn-label {
+    display: none;
+  }
 }
